fix z-index

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -6,7 +6,7 @@
   // right: 0
   // top: 0
   // width: 100%
-  z-index: 10
+  z-index: 100
   .container
     @include flexbox
     align-items: center
